--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,45 @@
 <!DOCTYPE html>
-<title>layout-designer-positioning-project-56 i_buzin</title>
+<html lang="en-US">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+
+    <title>layout-designer-positioning-project-56 i_buzin</title>
+    <link rel="stylesheet" href="/src/css/app.css" />
+</head>
+
+<body>
+    <header id="page-description">
+        <div class="content">
+            <div class="logo">
+                <img src="/src/images/logo.svg">
+                music box
+            </div>
+            <dix class="nav">
+                <div class="nav-element selected">Главная</div>
+                <div class="nav-element">Каталог</div>
+                <div class="nav-element">Исполнители</div>
+                <div class="nav-element">Контакты</div>
+            </dix>
+            <div class="search">
+                поиск...
+            </div>
+        </div>
+    </header>
+    <div class="hero back-img">
+        <div class="hero-content">
+            <h1>Онлайн музыка где угодно</h1>
+            <h2>без ограничений</h2>
+            <span>Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</span>
+            <form>
+                <input type="text" placeholder="Имя">
+                <input type="text" placeholder="Email">
+                <button type="submit">получить доступ</button>
+            </form>
+        </div>
+    </div>
+
+</body>
+
+</html>
