--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,29 @@
             </form>
         </div>
     </div>
+    <div id="page-pricing" class="page-pricing">
+        <h2>формы подписки</h2>
+        <div class="cards">
+            <div class="pricing-item bg-1">
+                <h3 class="upper">бесплатная</h3>
+                <p class="pricing-value">0<span class="currency upper">руб.</span></p>
+                <a href="#" class="btn mt-4">Оформить</a>
+                <p class="pricing-footer">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
+            </div>
+            <div class="pricing-item bg-2">
+                <h3 class="upper">стандартная</h3>
+                <p class="pricing-value">250<span class="currency upper">руб.</span></p>
+                <a href="#" class="btn mt-4">Оформить</a>
+                <p class="pricing-footer">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве</p>
+            </div>
+            <div class="pricing-item bg-3">
+                <h3 class="upper">премиум</h3>
+                <p class="pricing-value">500<span class="currency upper">руб.</span></p>
+                <a href="#" class="btn mt-4">Оформить</a>
+                <p class="pricing-footer">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
