--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,42 @@
                 <a href="#" class="btn mt-4">Оформить</a>
                 <p class="pricing-footer">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
             </div>
+            <div class="centre">На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать все композиции на ваше устройство и слушать музыку без подключения к интернету</div>
         </div>
     </div>
-
+    <div id="page-news" class="page-news flex">
+        <h2 class="upper">Последние новости</h2>
+        <div class="news-item flex">
+            <img src="/src/images/Music to Be Murdered By.png" alt="Не забудьте про alt">
+            <div class="news-body flex">
+              <h3>Music to Be Murdered By</h3>
+              <p>Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20 новых треков.</p>
+              <div class="news-footer">
+                <div class="news-author flex">
+                  <img class="avatar" src="/src/images/avatar.png" alt="Не забудьте про alt">
+                  <span class="upper orange">Music Box</span>
+                  <span>17/01/2020</span>
+                </div>
+                <a href="#" class="btn">К альбому</a>
+              </div>
+            </div>
+        </div>
+        <div class="news-item flex reverse">
+            <img src="/src/images/Ordinary Man.png" alt="Не забудьте про alt">
+            <div class="news-body flex">
+              <h3>Ordinary Man</h3>
+              <p>Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на Music Box</p>
+              <div class="news-footer">
+                <div class="news-author flex">
+                  <img class="avatar" src="/src/images/avatar.png" alt="Не забудьте про alt">
+                  <span class="upper orange">Music Box</span>
+                  <span>24/02/2020</span>
+                </div>
+                <a href="#" class="btn">К альбому</a>
+              </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
