--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,17 @@
             </div>
         </div>
     </div>
+    <div id="page-app" class="page-app flex column">
+        <h2 class="upper">Мобильное приложение</h2>
+        <div class="content flex">
+            <div class="left-side">
+                <p>Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе операционных систем Androind и iOS</p>
+                <p>С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать музыку даже без интернета.</p>
+                <a href="#" class="btn">Скачать</a>
+            </div>
+            <img class="avatar" src="/src/images/iphone.png" alt="Не забудьте про alt">
+        </div>
+    </div>
 </body>
 
 </html>
