--- a/src/index.html
+++ b/src/index.html
@@ -46,21 +46,25 @@
                 <h3 class="upper">бесплатная</h3>
                 <p class="pricing-value">0<span class="currency upper">руб.</span></p>
                 <a href="#" class="btn mt-4">Оформить</a>
-                <p class="pricing-footer">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции музыки. Присутствует реклама</p>
+                <p class="pricing-footer">Оплата в месяц. Бесплатный тариф предоставляет доступ ко всей коллекции
+                    музыки. Присутствует реклама</p>
             </div>
             <div class="pricing-item bg-2">
                 <h3 class="upper">стандартная</h3>
                 <p class="pricing-value">250<span class="currency upper">руб.</span></p>
                 <a href="#" class="btn mt-4">Оформить</a>
-                <p class="pricing-footer">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции музыки в среднем качестве</p>
+                <p class="pricing-footer">Оплата в месяц. Стандартный тариф предоставляет доступ ко всей коллекции
+                    музыки в среднем качестве</p>
             </div>
             <div class="pricing-item bg-3">
                 <h3 class="upper">премиум</h3>
                 <p class="pricing-value">500<span class="currency upper">руб.</span></p>
                 <a href="#" class="btn mt-4">Оформить</a>
-                <p class="pricing-footer">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в высоком качестве</p>
+                <p class="pricing-footer">Оплата в месяц. Премиум тариф предоставляет доступ ко всей коллекции музыки в
+                    высоком качестве</p>
             </div>
-            <div class="centre">На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе вы можете скачать все композиции на ваше устройство и слушать музыку без подключения к интернету</div>
+            <div class="centre">На всех тарифах возможно прослушивание музыки с мобильных устройств. На премиум тарифе
+                вы можете скачать все композиции на ваше устройство и слушать музыку без подключения к интернету</div>
         </div>
     </div>
     <div id="page-news" class="page-news flex">
@@ -68,31 +72,33 @@
         <div class="news-item flex">
             <img src="/src/images/Music to Be Murdered By.png" alt="Не забудьте про alt">
             <div class="news-body flex">
-              <h3>Music to Be Murdered By</h3>
-              <p>Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20 новых треков.</p>
-              <div class="news-footer">
-                <div class="news-author flex">
-                  <img class="avatar" src="/src/images/avatar.png" alt="Не забудьте про alt">
-                  <span class="upper orange">Music Box</span>
-                  <span>17/01/2020</span>
+                <h3>Music to Be Murdered By</h3>
+                <p>Новый альбом Eminem «Music to Be Murdered By» уже доступен в нашем сервисе. На альбоме вас ждёт 20
+                    новых треков.</p>
+                <div class="news-footer">
+                    <div class="news-author flex">
+                        <img class="avatar" src="/src/images/avatar.png" alt="Не забудьте про alt">
+                        <span class="upper orange">Music Box</span>
+                        <span>17/01/2020</span>
+                    </div>
+                    <a href="#" class="btn">К альбому</a>
                 </div>
-                <a href="#" class="btn">К альбому</a>
-              </div>
             </div>
         </div>
         <div class="news-item flex reverse">
             <img src="/src/images/Ordinary Man.png" alt="Не забудьте про alt">
             <div class="news-body flex">
-              <h3>Ordinary Man</h3>
-              <p>Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на Music Box</p>
-              <div class="news-footer">
-                <div class="news-author flex">
-                  <img class="avatar" src="/src/images/avatar.png" alt="Не забудьте про alt">
-                  <span class="upper orange">Music Box</span>
-                  <span>24/02/2020</span>
+                <h3>Ordinary Man</h3>
+                <p>Легенда рока Оззи Озборн спустя 10 лет выпустил новый альбом Ordinary Man. Слушайте в числе первых на
+                    Music Box</p>
+                <div class="news-footer">
+                    <div class="news-author flex">
+                        <img class="avatar" src="/src/images/avatar.png" alt="Не забудьте про alt">
+                        <span class="upper orange">Music Box</span>
+                        <span>24/02/2020</span>
+                    </div>
+                    <a href="#" class="btn">К альбому</a>
                 </div>
-                <a href="#" class="btn">К альбому</a>
-              </div>
             </div>
         </div>
     </div>
@@ -100,11 +106,54 @@
         <h2 class="upper">Мобильное приложение</h2>
         <div class="content flex">
             <div class="left-side">
-                <p>Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе операционных систем Androind и iOS</p>
-                <p>С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать музыку даже без интернета.</p>
+                <p>Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе
+                    операционных систем Androind и iOS</p>
+                <p>С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете
+                    слушать музыку даже без интернета.</p>
                 <a href="#" class="btn">Скачать</a>
             </div>
             <img class="avatar" src="/src/images/iphone.png" alt="Не забудьте про alt">
+        </div>
+    </div>
+    <div id="footer" class="footer bg-gradient">
+        <div class="content">
+            <div class="section">
+                <h2 class="upper">О нас</h2>
+                <a href="#">История компании</a>
+                <a href="#">Карьера</a>
+                <a href="#">Особенности</a>
+                <a href="#">Пресса</a>
+            </div>
+            <div class="section">
+                <h2 class="upper">Поддержка</h2>
+                <a href="#">База знаний</a>
+                <a href="#">Тарифы</a>
+                <a href="#">Мобильное приложение</a>
+                <a href="#">Условия использования</a>
+            </div>
+            <div class="section">
+                <h2 class="upper">Контакты</h2>
+                <a href="#">hello@music.box</a>
+                <a href="#">Russia, Moscow. Music Box studio</a>
+                <a href="#">+ 7 499 999 99 99</a>
+            </div>
+            <div class="section">
+                <h2 class="upper">Подписывайтесь</h2>
+                <div class="icons">
+                    <img class="icon" src="/src/images/Google+.png" alt="Не забудьте про alt">
+                    <img class="icon" src="/src/images/Twitter.png" alt="Не забудьте про alt">
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="content">
+            <div class="section-2">
+                <a href="#">Магазин</a>
+                <a href="#">Обслуживание</a>
+                <a href="#">Блог</a>
+                <a href="#">Поддержка</a>
+                <a href="#">Контакты</a>
+            </div>
         </div>
     </div>
 </body>
