--- a/src/artist.html
+++ b/src/artist.html
@@ -1,2 +1,40 @@
 <!DOCTYPE html>
-<title>layout-designer-positioning-project-56 i_buzin</title>
+<html lang="en-US">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+
+    <title>layout-designer-positioning-project-56 i_buzin</title>
+    <link rel="stylesheet" href="/src/css/app.css" />
+    <link rel="stylesheet" href="/src/css/artist.css" />
+</head>
+<body>
+    <header>
+        <div class="content">
+            <div class="logo">
+                <img src="/src/images/logo.svg">
+                music box
+            </div>
+            <dix class="nav">
+                <div class="nav-element">Главная</div>
+                <div class="nav-element">Каталог</div>
+                <div class="nav-element selected">Исполнители</div>
+                <div class="nav-element">Контакты</div>
+            </dix>
+            <div class="search">
+                поиск...
+            </div>
+        </div>
+    </header>
+    <div id="page-description" class="hero back-img">
+        <div class="hero-content">
+            <h1 class="upper">Morten Harket</h1>
+            <span>24 875 поклонников</span>
+            <div class="button-container mt-4">
+                <a href="#" class="btn purple upper"><span class="icon play"></span>Микс</a>
+                <a href="#" class="btn brown upper"><span class="icon heart"></span>В избранное</a>
+            </div>
+        </div>
+    </div>
+</body>
