--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
 
     <title>layout-designer-positioning-project-56 i_buzin</title>
     <link rel="stylesheet" href="/src/css/app.css" />
+    <link rel="stylesheet" href="/src/css/index.css" />
 </head>
 
 <body>
-    <header id="page-description">
+    <header>
         <div class="content">
             <div class="logo">
                 <img src="/src/images/logo.svg">
@@ -27,7 +28,7 @@
             </div>
         </div>
     </header>
-    <div class="hero back-img">
+    <div id="page-description" class="hero back-img">
         <div class="hero-content">
             <h1>Онлайн музыка где угодно</h1>
             <h2>без ограничений</h2>
