--- a/src/artist.html
+++ b/src/artist.html
@@ -37,4 +37,57 @@
             </div>
         </div>
     </div>
+    <div id="page-popular-track" class="page-popular-track flex">
+        <h2 class="upper">Популярные треки</h2>
+        <div class="tracks-content">
+            <div class="popular-track">
+                <img src="images/Wild Seed.png" alt="Не забудьте про alt">
+                <div class="track-info">
+                    <h3 class="upper">Spanish Step</h3>
+                    <div class="author">Morten Harket</div>
+                </div>
+                <div class="time">4:07</div>
+            </div>
+            <div class="popular-track">
+                <img src="images/Letter from Egypt.png" alt="Не забудьте про alt">
+                <div class="track-info">
+                    <h3 class="upper">With You - With Me</h3>
+                    <div class="author">Morten Harket</div>
+                </div>
+                <div class="time">3:48</div>
+            </div>
+            <div class="popular-track">
+                <img src="images/Brother.png" alt="Не забудьте про alt">
+                <div class="track-info">
+                    <h3 class="upper">Brother</h3>
+                    <div class="author">Morten Harket</div>
+                </div>
+                <div class="time">5:05</div>
+            </div>
+            <div class="popular-track">
+                <img src="images/Wild Seed.png" alt="Не забудьте про alt">
+                <div class="track-info">
+                    <h3 class="upper">Brodsky Tune</h3>
+                    <div class="author">Morten Harket</div>
+                </div>
+                <div class="time">4:24</div>
+            </div>
+            <div class="popular-track">
+                <img src="images/Letter from Egypt.png" alt="Не забудьте про alt">
+                <div class="track-info">
+                    <h3 class="upper">Darkspace</h3>
+                    <div class="author">Morten Harket</div>
+                </div>
+                <div class="time">3:45</div>
+            </div>
+            <div class="popular-track">
+                <img src="images/Out of My Hands.png" alt="Не забудьте про alt">
+                <div class="track-info">
+                    <h3 class="upper">Burn Money Burn</h3>
+                    <div class="author">Morten Harket</div>
+                </div>
+                <div class="time">3:52</div>
+            </div>
+        </div>
+    </div>
 </body>
