--- a/src/artist.html
+++ b/src/artist.html
@@ -90,4 +90,51 @@
             </div>
         </div>
     </div>
+    <div id="page-discography" class="page-discography flex">
+        <h2 class="upper">Дискография</h2>
+        <div class="content">
+            <div class="discography-item">
+                <img src="images/Brother.png" alt="Не забудьте про alt">
+                <div class="discography-info">
+                    <h4 class="capitalize">Brother</h4>
+                    <div class="year">2014</div>
+                </div>
+            </div>
+            <div class="discography-item">
+                <img src="images/Out of My Hands.png" alt="Не забудьте про alt">
+                <div class="discography-info">
+                    <h4 class="capitalize">Out Of My Hands</h4>
+                    <div class="year">2012</div>
+                </div>
+            </div>
+            <div class="discography-item">
+                <img src="images/Letter from Egypt.png" alt="Не забудьте про alt">
+                <div class="discography-info">
+                    <h4 class="capitalize">Letter From Egypt</h4>
+                    <div class="year">2008</div>
+                </div>
+            </div>
+            <div class="discography-item">
+                <img src="images/Vogts Villa.png" alt="Не забудьте про alt">
+                <div class="discography-info">
+                    <h4 class="capitalize">Vogts Vills</h4>
+                    <div class="year">1996</div>
+                </div>
+            </div>
+            <div class="discography-item">
+                <img src="images/Wild Seed.png" alt="Не забудьте про alt">
+                <div class="discography-info">
+                    <h4 class="capitalize">Wild Seed</h4>
+                    <div class="year">1995</div>
+                </div>
+            </div>
+            <div class="discography-item">
+                <img src="images/Poetenes Evangelium.png" alt="Не забудьте про alt">
+                <div class="discography-info">
+                    <h4 class="capitalize">Poetenes Evangelium</h4>
+                    <div class="year">1993</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
