--- a/src/artist.html
+++ b/src/artist.html
@@ -137,4 +137,106 @@
             </div>
         </div>
     </div>
+    <div id="page-similar" class="page-similar flex">
+        <h2 class="upper">Похожие исполнители</h2>
+        <div class="content">
+            <div class="similar-item">
+                <img src="images/A-ha.png" alt="Не забудьте про alt">
+                <div class="similar-info">
+                    <h4 class="capitalize">A-Ha</h4>
+                    <div class="fans">417 086 поклонников</div>
+                </div>
+            </div>
+            <div class="similar-item">
+                <img src="images/Tears for Fears.png" alt="Не забудьте про alt">
+                <div class="similar-info">
+                    <h4 class="capitalize">Tears For Fears</h4>
+                    <div class="fans">434 086 поклонников</div>
+                </div>
+            </div>
+            <div class="similar-item">
+                <img src="images/Duran Duran.png" alt="Не забудьте про alt">
+                <div class="similar-info">
+                    <h4 class="capitalize">Duran Duran</h4>
+                    <div class="fans">631 071 поклонник</div>
+                </div>
+            </div>
+            <div class="similar-item">
+                <img src="images/Jack Savoretti.png" alt="Не забудьте про alt">
+                <div class="similar-info">
+                    <h4 class="capitalize">Jack Savoretti</h4>
+                    <div class="fans">26 857 поклонников</div>
+                </div>
+            </div>
+            <div class="similar-item">
+                <img src="images/Keane.png" alt="Не забудьте про alt">
+                <div class="similar-info">
+                    <h4 class="capitalize">Keane</h4>
+                    <div class="fans">1 704 358 поклонников</div>
+                </div>
+            </div>
+            <div class="similar-item">
+                <img src="images/Frank Sinatra.png" alt="Не забудьте про alt">
+                <div class="similar-info">
+                    <h4 class="capitalize">Frank Sinatra</h4>
+                    <div class="fans">1 653 882 поклонников</div>
+                </div>
+            </div>
+            <div class="similar-item">
+                <img src="images/Paul Young.png" alt="Не забудьте про alt">
+                <div class="similar-info">
+                    <h4 class="capitalize">Paul Young</h4>
+                    <div class="fans">1 653 882 поклонников</div>
+                </div>
+            </div>
+            <div class="similar-item">
+                <img src="images/Chris Rea.png" alt="Не забудьте про alt">
+                <div class="similar-info">
+                    <h4 class="capitalize">Chris Rea</h4>
+                    <div class="fans">73 351 поклонников</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer" class="footer bg-gradient">
+        <div class="content">
+            <div class="section">
+                <h2 class="upper">О нас</h2>
+                <a href="#">История компании</a>
+                <a href="#">Карьера</a>
+                <a href="#">Особенности</a>
+                <a href="#">Пресса</a>
+            </div>
+            <div class="section">
+                <h2 class="upper">Поддержка</h2>
+                <a href="#">База знаний</a>
+                <a href="#">Тарифы</a>
+                <a href="#">Мобильное приложение</a>
+                <a href="#">Условия использования</a>
+            </div>
+            <div class="section">
+                <h2 class="upper">Контакты</h2>
+                <a href="#">hello@music.box</a>
+                <a href="#">Russia, Moscow. Music Box studio</a>
+                <a href="#">+ 7 499 999 99 99</a>
+            </div>
+            <div class="section">
+                <h2 class="upper">Подписывайтесь</h2>
+                <div class="icons">
+                    <img class="icon" src="/src/images/Google+.png" alt="Не забудьте про alt">
+                    <img class="icon" src="/src/images/Twitter.png" alt="Не забудьте про alt">
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="content">
+            <div class="section-2">
+                <a href="#">Магазин</a>
+                <a href="#">Обслуживание</a>
+                <a href="#">Блог</a>
+                <a href="#">Поддержка</a>
+                <a href="#">Контакты</a>
+            </div>
+        </div>
+    </div>
 </body>
